fixed section spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,18 +53,27 @@ body {
 }
 
 main {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(50px, auto);
-  column-gap: 20px;
-
   min-width: 940px;
   width: 60vw;
   max-width: 1200px;
 
-  margin: 0 auto;
   position: relative;
+  margin: 0 auto;
 }
+
+#wrapper, header {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  column-gap: 20px;
+  row-gap: 10rem;
+}
+
+header {
+  margin-bottom: 2rem;
+}
+
+
 
 
 /**************
@@ -76,7 +85,7 @@ main {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 20px;
-  margin: 1rem 0 12rem;
+  margin: 1rem 0 1rem;
 }
 
 .sectionCenter {
